--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,5 +1,9 @@
 <form id="formulario-login">
     <div class="form-group">
+        <label for="Name">Name</label>
+        <input type="text" class="form-control" id="Name" placeholder="Name">
+    </div>
+    <div class="form-group">
         <label for="Email">Email adress</label>
         <input type="email" class="form-control" id="Email" placeholder="Email">
     </div>
