--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -27,7 +27,7 @@
             <input type="text" class="form-control" name="coordinates[]" id="Coordinates" placeholder="Coordenadas" value="-29.81421">
             <input type="text" class="form-control" name="coordinates[]" id="Coordinates" placeholder="Coordenadas" value="-51.15332">
         </div>
-        <button>Enviar</button>
+        <button class="btn btn-default">Enviar</button>
     </form>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
