--- a/views/drivers/index.ejs
+++ b/views/drivers/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= title %>
+        <%= Title %>
     </title>
     <link rel="stylesheet" href="/css/plugins/bootstrap.css">
     <link rel='stylesheet' href='/css/stylesheets/style.css' />
@@ -11,10 +11,10 @@
 
 <body>
     <h1>
-        <%= title %>
+        <%= Title %>
     </h1>
     <p>Welcome to
-        <%= title %>
+        <%= Title %>
     </p>
     <form class="form-register">
         <div class="form-group">
@@ -33,7 +33,7 @@
             <label for="Cell">Telefone</label>
             <input type="text" class="form-control" name="cell" id="Cell" placeholder="Telefone">
         </div>
-        <button>Enviar</button>
+        <button class="btn btn-default">Enviar</button>
     </form>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
