--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -18,7 +18,7 @@
                 <label for="Password">Password</label>
                 <input type="password" class="form-control" id="Password" placeholder="Password">
             </div>
-            <button class="btn btn-">Enviar</button>
+            <button class="btn btn-default">Enviar</button>
         </form>
         <script src="/js/plugins/jquery.js"></script>
         <script src="/js/plugins/bootstrap.js"></script>       
