--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -29,7 +29,7 @@
             <label for="Password">Senha</label>
             <input type="password" class="form-control" name="password" id="Password" placeholder="Senha">
         </div>
-        <button>Enviar</button>
+        <button class="btn btn-default">Enviar</button>
     </form>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
