--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
 
 <head>
     <title>
@@ -17,7 +16,7 @@
     <p>Welcome to
         <%= title %>
     </p>
-    <form class="form-register">
+    <form class="form-register-event">
         <div class="form-group">
             <label for="Title">Título</label>
             <input type="text" class="form-control" name="title" id="Title" placeholder="Título">
@@ -35,14 +34,3 @@
 </body>
 
 </html>
-=======
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Essa é a tela de <%= title %></p>
-  </body>
-</html>
->>>>>>> dabfd645b637c21f0b8637df878d8c8d43770f1b
