--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -22,15 +22,15 @@
             <input type="text" class="form-control" name="title" id="Title" placeholder="Título">
         </div>
         <div class="form-group">
-            <label for="Coordinates">Coordenadas</label>
-            <input type="text" class="form-control" name="coordinates[]" id="Coordinates" placeholder="Coordenadas" value="-29.81421">
-            <input type="text" class="form-control" name="coordinates[]" id="Coordinates" placeholder="Coordenadas" value="-51.15332">
+            <label>Coordenadas</label>
+            <input type="text" class="form-control" name="coordinates[]" placeholder="Coordenadas" value="-29.81421">
+            <input type="text" class="form-control" name="coordinates[]" placeholder="Coordenadas" value="-51.15332">
         </div>
         <button class="btn btn-default">Enviar</button>
     </form>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
-    <script src="/js/scripts/users.js"></script>
+    <script src="/js/scripts/events.js"></script>
 </body>
 
 </html>
