--- a/views/drivers/index.ejs
+++ b/views/drivers/index.ejs
@@ -7,15 +7,13 @@
     </title>
     <link rel="stylesheet" href="/css/plugins/bootstrap.css">
     <link rel='stylesheet' href='/css/stylesheets/style.css' />
+    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
 </head>
 
 <body>
     <h1>
         <%= Title %>
     </h1>
-    <p>Welcome to
-        <%= Title %>
-    </p>
     <form class="form-register">
         <div class="form-group">
             <label for="Name">Nome</label>
@@ -26,13 +24,10 @@
             <input type="email" class="form-control" name="email" id="Email" placeholder="Email">
         </div>
         <div class="form-group">
-            <label for="City">Cidade</label>
-            <input type="text" class="form-control" name="city" id="City" placeholder="Cidade">
-        </div>
-        <div class="form-group">
             <label for="Cell">Telefone</label>
             <input type="text" class="form-control" name="cell" id="Cell" placeholder="Telefone">
         </div>
+        <input type="hidden" class="form-control" name="city" id="City" placeholder="Cidade">
         <button class="btn btn-default">Enviar</button>
     </form>
     <script src="/js/plugins/jquery.js"></script>
