Google maps integrated

--- a/views/events/recipes.ejs
+++ b/views/events/recipes.ejs
@@ -10,26 +10,31 @@
 </head>
 
 <body>
-    <h1>
-        <%= title %>
-    </h1>
-    <p>Welcome to
-        <%= title %>
-    </p>
-    <form class="form-register-recipe">
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Dropdown
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li>Canja de galinha</li>
-                <li>Caldo de carne</li>
-                <li>Sopa de legumes</li>
-            </ul>
-        </div>
-        <button>Enviar</button>
-    </form>
+    <section class="container">
+        <h1>
+            <%= title %>
+        </h1>
+        <p>Welcome to
+            <%= title %>
+        </p>
+        <form class="form-register-recipe">
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Dropdown
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li>Canja de galinha</li>
+                    <li>Caldo de carne</li>
+                    <li>Sopa de legumes</li>
+                </ul>
+            </div>
+            <button>Enviar</button>
+        </form>
+    </section>
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    </script>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
     <script src="/js/scripts/users.js"></script>
