--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -10,27 +10,33 @@
 </head>
 
 <body>
-    <h1>
-        <%= title %>
-    </h1>
-    <p>Welcome to
-        <%= title %>
-    </p>
-    <form class="form-register-event">
-        <div class="form-group">
-            <label for="Title">Título</label>
-            <input type="text" class="form-control" name="title" id="Title" placeholder="Título">
-        </div>
-        <div class="form-group">
-            <label>Coordenadas</label>
-            <input type="text" class="form-control" name="coordinates[]" placeholder="Coordenadas" value="-29.81421">
-            <input type="text" class="form-control" name="coordinates[]" placeholder="Coordenadas" value="-51.15332">
-        </div>
-        <button class="btn btn-default">Enviar</button>
-    </form>
+    <section class="container">
+        <h1>
+            <%= title %>
+        </h1>
+        <p>Welcome to
+            <%= title %>
+        </p>
+        <form class="form-register-event">
+            <div class="form-group">
+                <label for="Title">Título</label>
+                <input type="text" class="form-control" name="title" id="Title" placeholder="Título">
+            </div>
+            <div class="form-group">
+                <input type="hidden" class="form-control latitude" name="coordinates[]" placeholder="Coordenadas">
+                <input type="hidden" class="form-control longitude" name="coordinates[]" placeholder="Coordenadas">
+            </div>
+            <button class="btn btn-default">Enviar</button>
+        </form>
+    </section>
+    <div id="map"></div>
+    <button class="sent">Enviar</button>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
     <script src="/js/scripts/events.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6pcTd1d77aHPU596ktdbvUz-SHH9cphE&callback=initMap">
+    </script>
 </body>
 
 </html>
