--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -10,30 +10,33 @@
 </head>
 
 <body>
-    <h1>
-        <%= title %>
-    </h1>
-    <p>Welcome to
-        <%= title %>
-    </p>
-    <form class="form-register">
-        <div class="form-group">
-            <label for="Email">Email</label>
-            <input type="email" class="form-control" name="email" id="Email" placeholder="Email">
-        </div>
-        <div class="form-group">
-            <label for="Name">Nome</label>
-            <input type="text" class="form-control" name="name" id="Name" placeholder="Nome">
-        </div>
-        <div class="form-group">
-            <label for="Password">Senha</label>
-            <input type="password" class="form-control" name="password" id="Password" placeholder="Senha">
-        </div>
-        <button class="btn btn-default">Enviar</button>
-    </form>
-    <script src="/js/plugins/jquery.js"></script>
-    <script src="/js/plugins/bootstrap.js"></script>
-    <script src="/js/scripts/users.js"></script>
-</body>
+    <section class="container">
+        <h1>
+            <%= title %>
+        </h1>
+        <p>Welcome to
+            <%= title %>
+        </p>
+        
+        <form class="form-register">
+            <div class="form-group">
+                <label for="Email">Email</label>
+                <input type="email" class="form-control" name="email" id="Email" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="Name">Nome</label>
+                <input type="text" class="form-control" name="name" id="Name" placeholder="Nome">
+            </div>
+            <div class="form-group">
+                <label for="Password">Senha</label>
+                <input type="password" class="form-control" name="password" id="Password" placeholder="Senha">
+            </div>
+            <button class="btn btn-default">Enviar</button>
+        </form>
+    </section>
+        <script src="/js/plugins/jquery.js"></script>
+        <script src="/js/plugins/bootstrap.js"></script>
+        <script src="/js/scripts/users.js"></script>
+    </body>
 
 </html>
