--- a/views/events/recipes.ejs
+++ b/views/events/recipes.ejs
@@ -16,23 +16,29 @@
     <p>Welcome to
         <%= title %>
     </p>
-    <form class="form-register-recipe">
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Dropdown
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li>Canja de galinha</li>
-                <li>Caldo de carne</li>
-                <li>Sopa de legumes</li>
-            </ul>
+    <form class="form-register-recipe formulario" action="/events/<%= eventId %>/recipe" method="POST">
+        <div class="form-group">
+          <label class="control-label">Qual receita será preparada?</label>
+          <select name="receita" class="receita form-control" onchange="atualizarReceita()">
+            <option value="">-- Selecione --</option>
+            <option value="sopa-de-legumes">Sopa de Legumes</option>
+            <option value="canja">Canja</option>
+            <option value="carreteiro">Carreteiro</option>
+          </select>
         </div>
-        <button>Enviar</button>
+        <div class="form-group" style="display: none;">
+          <label class="control-label">Quantas pessoas você pretende ajudar?</label>
+          <input type="text" name="quantidade" class="quantidade form-control" onchange="atualizarIngredientes()">
+        </div>
+        <div class="panel panel-default ingredientes" style="display: none;">
+          <div class="panel-heading">Você irá precisar destes ingredientes:</div>
+          <table class="table table-bordered"></table>
+        </div>
+        <button type="button" class="btn btn-success" onclick="cliqueNoSalvar()">Avançar</button>
     </form>
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
-    <script src="/js/scripts/users.js"></script>
+    <script src="/js/scripts/recipe.js"></script>
 </body>
 
 </html>
