não tem mais como

--- a/views/events/drivers.ejs
+++ b/views/events/drivers.ejs
@@ -5,8 +5,9 @@
     <title>
         <%= Title %>
     </title>
+<link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap.css">
-    <link rel='stylesheet' href='/css/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/css/styles/style.css' />
     <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXMI9nDd3uPOhTEGl04Cqbs2EXWROT35E"></script>
 </head>
 
