--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,8 +3,9 @@
 <html>
   <head>
     <title><%= title %></title>
+<link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap.css">
-    <link rel='stylesheet' href='/css/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/css/styles/style.css' />
   </head>
   <body>
     <section class="container">
