--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -12,6 +12,7 @@
 
 <body>
     <section class="container">
+        <h1><%= title %></h1>
         <form class="form-register">
             <div class="form-group">
                 <label for="Email">Email</label>
