--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,11 +12,11 @@
         <form class="form-login">
             <div class="form-group">
                 <label for="Email">Email adress</label>
-                <input type="email" class="form-control" id="Email" placeholder="Email">
+                <input type="email" name="email" class="form-control" id="Email" placeholder="Email">
             </div>
             <div class="form-group">
                 <label for="Password">Password</label>
-                <input type="password" class="form-control" id="Password" placeholder="Password">
+                <input type="password" name="password" class="form-control" id="Password" placeholder="Password">
             </div>
             <button class="btn btn-default">Enviar</button>
         </form>
