--- a/views/events/offers.ejs
+++ b/views/events/offers.ejs
@@ -5,7 +5,7 @@
     <title>
         <%= title %>
     </title>
-    <link rel="stylesheet" href="/css/plugins/bootstrap.css">
+    <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/stylesheets/style.css' />
 </head>
 
