--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -6,7 +6,7 @@
         <%= title %>
     </title>
 <link rel="icon" type="image/png" href="/logo.png" />    
-    <link rel="stylesheet" href="/css/plugins/bootstrap.css">
+    <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/css/styles/style.css' />
 </head>
 
