--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,11 @@
   <head>
     <title><%= title %></title>
     <link rel="icon" type="image/png" href="/logo.png" />
-    <link rel="stylesheet" href="/css/plugins/bootstrap.css">
+    <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel="stylesheet" href="/css/styles/style.css" />
   </head>
   <body>
+    </header>
     <div class="container root">
         <img src="/logo.png" class="image-logo"/>        
         <h1 class="title title-parent">PANELÃO DO BEM</h1>        
