--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,7 +4,7 @@
   <head>
     <title><%= title %></title>
 <link rel="icon" type="image/png" href="/logo.png" />    
-    <link rel="stylesheet" href="/css/plugins/bootstrap.css">
+    <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/css/styles/style.css' />
   </head>
   <body>
