--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <br>
         <a href="/users/register" class="btn btn-danger button-start">Começar</a>
     </div>
-    <footer class="footer">
+    <footer class="footer conatainer">
         <div class="container">
         </div>
     </footer>
