--- a/public/css/styles/style.css
+++ b/public/css/styles/style.css
@@ -32,7 +32,7 @@ html, body {
 
 .title.title-info {
   font-family: 'Indie Flower', cursive;  
-  margin: 20px 35%;
+  margin: 30px 200px;
   font-size: 22px;
 }
 
