--- a/public/css/styles/style.css
+++ b/public/css/styles/style.css
@@ -32,8 +32,14 @@ html, body {
 
 .title.title-info {
   font-family: 'Indie Flower', cursive;  
-  margin: 30px 200px;
+  margin: 30px 20%;
   font-size: 22px;
+}
+
+@media(max-width: 720px) {
+  .image-logo {
+    height: 200px;
+  }
 }
 
 .footer {
