--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -7,7 +7,7 @@
     </title>
 <link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap.css">
-    <link rel='stylesheet' href='/css/css/styles/style.css' />
+    <link rel='stylesheet' href='/css/styles/style.css' />
 </head>
 
 <body>
