--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -12,22 +12,24 @@
 
 <body>
     <section class="container">
-        <h1><%= title %></h1>
-        <form class="form-register">
-            <div class="form-group">
-                <label for="Email">Email</label>
-                <input type="email" class="form-control" name="email" id="Email" placeholder="Email">
-            </div>
-            <div class="form-group">
-                <label for="Name">Nome</label>
-                <input type="text" class="form-control" name="name" id="Name" placeholder="Nome">
-            </div>
-            <div class="form-group">
-                <label for="Password">Senha</label>
-                <input type="password" class="form-control" name="password" id="Password" placeholder="Senha">
-            </div>
-            <button class="btn btn-default">Enviar</button>
-        </form>
+        <div class="row">
+            <form class="form-register col-sm-6 col-sm-offset-3">
+                <h1><%= title %></h1>
+                <div class="form-group">
+                    <label for="Email">Email</label>
+                    <input type="email" class="form-control" name="email" id="Email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="Name">Nome</label>
+                    <input type="text" class="form-control" name="name" id="Name" placeholder="Nome">
+                </div>
+                <div class="form-group">
+                    <label for="Password">Senha</label>
+                    <input type="password" class="form-control" name="password" id="Password" placeholder="Senha">
+                </div>
+                <button class="btn btn-default">Enviar</button>
+            </form>
+        </div>
     </section>
         <script src="/js/plugins/jquery.js"></script>
         <script src="/js/plugins/bootstrap.js"></script>
