--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,7 +5,7 @@
     <title><%= title %></title>
 <link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
-    <link rel='stylesheet' href='/css/css/styles/style.css' />
+    <link rel='stylesheet' href='/css/styles/login.css' />
   </head>
   <body>
     <section class="container">
