Fixed connection between recipes and map

--- a/views/events/recipes.ejs
+++ b/views/events/recipes.ejs
@@ -5,15 +5,9 @@
     <title>
         <%= title %>
     </title>
-<<<<<<< HEAD
 <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="stylesheet" href="/css/plugins/bootstrap.css">
     <link rel='stylesheet' href='/css/styles/style.css' />
-=======
-<link rel="icon" type="image/png" href="/logo.png" />    
-    <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
-    <link rel='stylesheet' href='/css/css/styles/style.css' />
->>>>>>> bcf9afe9106f95e036fb5fef7c19315d6902d420
 </head>
 
 <body>
@@ -43,7 +37,7 @@
                 <div class="panel-heading">Você irá precisar destes ingredientes:</div>
                 <table class="table table-bordered"></table>
             </div>
-            <button type="button" class="btn btn-success" onclick="cliqueNoSalvar()">Avançar</button>
+            <button type="submit" class="btn btn-success">Avançar</button>
         </form>
         <script src="/js/plugins/jquery.js"></script>
         <script src="/js/plugins/bootstrap.js"></script>
