--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -6,6 +6,7 @@
 <link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/styles/login.css' />
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">    
   </head>
   <body>
     <section class="container">
@@ -14,12 +15,18 @@
             <form class="form-login col-sm-6 col-sm-offset-3">
                 <h1><%= title %></h1>
                 <div class="form-group">
-                    <label for="Email">Email adress</label>
-                    <input type="email" name="email" class="form-control" id="Email" placeholder="Email">
+                    <label for="Email">E-mail</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="email" name="email" class="form-control" id="Email" placeholder="exemplo@gmail.com">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="Password">Password</label>
-                    <input type="password" name="password" class="form-control" id="Password" placeholder="Password">
+                    <label for="Password">Senha</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input type="password" name="password" class="form-control" id="Password" placeholder="********">
+                    </div>
                 </div>
                 <button class="btn btn-default">Enviar</button>
             </form>
