--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -26,7 +26,7 @@
                 <div class="form-group">
                     <label for="Name">Nome</label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-book"></i></span>
                         <input type="text" class="form-control" name="name" id="Name" placeholder="João da Silva">
                     </div>
                 </div>
