--- a/views/events/offers.ejs
+++ b/views/events/offers.ejs
@@ -6,6 +6,7 @@
         <%= title %>
     </title>
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
     <link rel='stylesheet' href='/css/stylesheets/style.css' />
 </head>
 
