--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -8,6 +8,7 @@
 <link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/styles/register.css' />
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">    
 </head>
 
