--- a/views/events/drivers.ejs
+++ b/views/events/drivers.ejs
@@ -8,6 +8,7 @@
 <link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/css/styles/style.css' />
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
     <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXMI9nDd3uPOhTEGl04Cqbs2EXWROT35E"></script>
 </head>
 
