--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -3,15 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <title>Eventos</title>
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <a href="/events/register" class="btn btn-primary">Criar evento</a>
-            <div class="root col-sm-6 col-sm-offset-3"></div>
-        </div>
+        <a href="/events/register" class="btn btn-primary">Criar evento</a>
+        <div class="root col-sm-6 col-sm-offset-3"></div>
     </div>
 
     <script src="/js/plugins/jquery.js"></script>
