--- a/views/events/register.ejs
+++ b/views/events/register.ejs
@@ -7,6 +7,7 @@
     </title>
 <link rel="icon" type="image/png" href="/logo.png" />    
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
     <link rel='stylesheet' href='/css/css/styles/style.css' />
 </head>
 
