bota na cabeça que estilo não é marra

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,7 @@
   <body>
     <section class="container">
         <div class="row">
-            
+            <img src="/logo.png" class="image-logo"/>
             <form class="form-login col-sm-6 col-sm-offset-3">
                 <h1><%= title %></h1>
                 <div class="form-group">
