--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -15,6 +15,7 @@
 <body>
     <section class="container">
         <div class="row">
+            <img src="/logo.png" class="image-logo"/>
             <form class="form-register col-sm-6 col-sm-offset-3">
                 <h1><%= title %></h1>
                 <div class="form-group">
