--- a/views/events/drivers.ejs
+++ b/views/events/drivers.ejs
@@ -5,7 +5,7 @@
     <title>
         <%= Title %>
     </title>
-<link rel="icon" type="image/png" href="/logo.png" />    
+<link rel="icon" type="image/png" href="/logo.png" />
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
     <link rel='stylesheet' href='/css/css/styles/style.css' />
     <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXMI9nDd3uPOhTEGl04Cqbs2EXWROT35E"></script>
@@ -16,11 +16,16 @@
         <%= Title %>
     </h1>
 
-    <div id="root"></div>
+    <div id="map"></div>
+    <button class="sent">Enviar</button>
 
     <script src="/js/plugins/jquery.js"></script>
     <script src="/js/plugins/bootstrap.js"></script>
     <script src="/js/scripts/listDrivers.js"></script>
+    <script src="/js/scripts/map.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6pcTd1d77aHPU596ktdbvUz-SHH9cphE&callback=initMap">
+    </script>
 </body>
 
 </html>
