--- a/views/drivers/index.ejs
+++ b/views/drivers/index.ejs
@@ -7,7 +7,7 @@
     </title>
 <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="stylesheet" href="/css/plugins/bootstrap-cosmo.css">
-    <link rel='stylesheet' href='/css/css/styles/style.css' />
+    <link rel='stylesheet' href='/css/styles/style.css' />
     <meta name="viewport" content="width=device-width, user-scalable=no">    
     <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
 </head>
